# asekuro

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  REMINDERS.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: test.yaml
asekuro/: __init__.py  cli.py  commandline.py  common.py
tests/: bad-nb.ipynb  functions-solution-fail.py  functions-solution.py  functions.ipynb  good-nb-metadata.ipynb  nb-autoreload.ipynb  nbcontent.py  test_commandline.py  test_docker.py  testnb.ipynb
tests/data/: words.txt
tests/docker/: Dockerfile.test1  Dockerfile.test2
tests/notebooks/: commented-load.ipynb  data-nb.ipynb  good-nb.ipynb  good-question-nb.ipynb  nb-autoreload.ipynb  nbcontent-2.py
